@@ -102,8 +102,8 @@
     <tr>
       <td></td>
       <td class="reviewsTabs">
-        <a class='active' href="?isReview=1">Отзывы</a>
-        <a href="?isVideo=1">Видео выпускников</a>
+        <a  class='active' href="?isReview=1">Отзывы</a>
+        <a  href="?isVideo=1">Видео выпускников</a>
       </td>
     </tr>
     <tr>
@@ -143,7 +143,7 @@
 
         <div class="reviewsItem">
           <div class="reviewsItemPic">
-            <img src='/netcat_files/4/4/preview_6.Koshel__Egor_85.jpg' alt=''></div>
+            <img src='./netcat_files/4/4/preview_6.Koshel__Egor_85.jpg' alt=''></div>
           <div class="reviewsItemAuthor">
             <div class="h3"><a href="/otzyvy-i-rezultaty/otzyvy-i-rezultaty_521.html">Кошель Егор</a></div>
             <div class="reviewsItemDesc1">
@@ -488,7 +488,7 @@
               профильной математике на 86 баллов. Спасибо еще раз.</p>
             <div class="reviewsItemVideo">
               <button class="green center">Посмотреть видео-отзыв</button>
-              <div class="reviewsItemVideoReview">
+              <div class="reviewsItemVideoReview active">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1HS7aNe2QXc" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
